向量检索程序优化-分段保存

--- a/工作日志/日志.md
+++ b/工作日志/日志.md
@@ -3,3 +3,7 @@ day1 增加callback统计用量
 day2考虑分batch 数据多 还有多模态数据用多模态api
 
 有全量数据命令和增量数据命令 config保存所有可选参数
+
+gitignore解决文件问题
+
+chatgpt帮忙解决批次保存和卡死 失败文件保存
