--- a/工作日志/整体计划.md
+++ b/工作日志/整体计划.md
@@ -25,8 +25,8 @@
 ```
 Phase 1 (Day 1)      基础 Agent        ← 用预构建函数跑通工具调用         ✅ 已完成
 Phase 2 (Day 2-3)    加入 RAG          ← 能基于本地文档回答问题           ✅ 已完成
-Phase 3 (Day 4-5)    加入 Memory       ← 对话记忆持久化，跨会话记住上下文
-Phase 4 (Day 6-8)    深入 Agent 图     ← 替换预构建为手动 LangGraph，自定义 ReAct 循环
+Phase 3 (Day 4-5)    加入 Memory       ← 对话记忆持久化，跨会话记住上下文   ✅ 已完成
+Phase 4 (Day 6-8)    深入 Agent 图     ← 替换预构建为手动 LangGraph，自定义 ReAct 循环  ✅ 已完成
 Phase 5 (Day 9-11)   深入 RAG 管线     ← 自定义分块、嵌入、检索策略，提升问答质量
 Phase 6 (Day 12+)    高级特性          ← 流式输出、Web UI、多轮 RAG、自适应检索
 ```
@@ -72,37 +72,33 @@ python main.py
 
 ---
 
-## Phase 3 — 加入 Memory
+## Phase 3 — 加入 Memory ✅
 
 **目标**: 对话记忆持久化，关闭程序后重开仍然记住之前的对话。
 
-**方式**: LangGraph 的 `MemorySaver`（内存）→ `SqliteSaver`（持久化 SQLite）。
+**方式**: `SqliteSaver`（持久化 SQLite）。
 
 **内容**:
 - `agent/memory/checkpointer.py` — SqliteSaver 配置
-- `thread_id` 管理 — 支持切换/恢复历史对话
-- 对话列表功能
-
-**验证**:
-```
-python main.py
-> 我叫小明           → Agent 记住
-> [退出重启]
-> 我叫什么？         → 回答"小明"
-```
+- `thread_id` 管理 — 支持 `/thread <id>` 切换、`clear` 新建
+- 消息窗口限制（MAX_MESSAGES=10），长对话 token 省 50-80%
+- `scripts/inspect_db.py` — 数据库检查脚本
 
 ---
 
-## Phase 4 — 深入 Agent 图
+## Phase 4 — 深入 Agent 图 ✅
 
-**目标**: 将 `create_react_agent` 替换为手动构建的 LangGraph 状态图，完全理解和掌控 ReAct 循环。
+**目标**: 将 `create_agent` 替换为手动构建的 LangGraph 状态图，完全理解和掌控 ReAct 循环。
 
 **意义**: 从"会用"到"会改"的关键一步。
 
 **内容**:
-- 手动定义 `AgentState`、`agent_node`、`tool_node`、`should_continue` 条件路由
-- 加入自定义节点: `preprocess_node`（查询改写）、`postprocess_node`（结果格式化）
-- 可视化 Agent 图
+- 新建 `agent/graph.py` — 手动定义 `AgentState`、`StateGraph`
+- 6 个节点: `trim`、`rewrite`、`agent`、`tools`、`increment`、`force_reply`
+- 自定义 `AgentState`（增加 `iteration_count` 字段）
+- 查询改写节点（`rewrite_node`）— 短问题/含代词时 LLM 改写，提高 RAG 命中率
+- 工具调用上限保护（`max_iterations=5`）— 防止无限循环，超限强制回答
+- `main.py` 支持 `--classic` 参数保留旧版，默认使用新版 StateGraph
 
 ---
 
