--- a/工作日志/日志.md
+++ b/工作日志/日志.md
@@ -7,5 +7,7 @@ day2考虑分batch 数据多 还有多模态数据用多模态api
 gitignore解决文件问题
 
 chatgpt帮忙解决批次保存和卡死 失败文件保存
-day3 增加记忆 限制 10条最新消息 同时把旧版create agent改成新版改调用方式 适配 装饰器 这个记忆只是记录本地对话内容 和远程的记忆无关 
+day3 增加记忆 限制 10条最新消息 同时把旧版create agent改成新版改调用方式 适配 装饰器 这个记忆只是记录本地对话内容 和远程的记忆无关
 一项任务就把gemini pro用干了 但是claude还挺耐用 还写了一个db查看脚本
+
+day4 增加了自己手写的节点graph 在基础内容上增加了 工具保护和rag查询增强
